styled button and centered nav + title container div

--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -30,10 +30,7 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
-	max-width: 1000px;
-	display: flex;
-	flex-direction: column;
-	/*align-content: center;*/
+	max-width: 100%;
 }
 ol, ul {
 	list-style: none;
@@ -92,4 +89,33 @@ a {
 
 .logo{
 	border: solid;
+}
+
+.title-container{
+	border: solid;
+	display: flex;
+	justify-content: space-evenly;
+}
+
+.main-title{
+	display: flex;
+	flex-direction: column;
+	text-align: center;
+	border: solid;
+	justify-content: center;
+}
+
+h1{
+	font-size: 70px;
+}
+
+#btn{
+	border: solid;
+}
+
+.button{
+	background-color: white;
+	border-color: #e7e7e7; 
+	border: solid #CCD2C1;
+	width: 150px;
 }
