--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -95,6 +95,8 @@ a {
 	border: solid;
 	display: flex;
 	justify-content: space-evenly;
+	padding-top: 60px;
+	padding-bottom: 60px;
 }
 
 .main-title{
@@ -118,4 +120,45 @@ h1{
 	border-color: #e7e7e7; 
 	border: solid #CCD2C1;
 	width: 150px;
+}
+
+.info-container1{
+	border: solid;
+	display: flex;
+	justify-content: space-evenly;
+	align-items: center;
+	text-align: justify;
+	padding-top: 40px;
+	padding-bottom: 40px;
+	margin-left: 185px;
+	margin-right: 185px;
+}
+
+.features{
+	border: solid;
+}
+
+.about{
+	border: solid;
+}
+
+.middle-image{
+	display: flex;
+	border: solid;
+	justify-content: center;
+}
+
+.info-container2{
+	display: flex;
+	justify-content: center;
+	border: solid;
+	padding-top: 40px;
+	padding-bottom: 40px; 
+	margin-left: 150px;
+	margin-right: 150px;
+	
+}
+
+footer{
+	margin-left:20px;
 }
