--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -69,7 +69,7 @@ h1, h2, h3, h4, h5 {
 header nav{
 	display: flex;
 	justify-content: space-evenly;
-	border: solid;
+	
 
 }
 
@@ -78,21 +78,19 @@ header nav{
 	display: flex;
 	justify-content: space-evenly;
 	align-items: center;
-	border: solid;
+	
 }
 
 a {
 	color: #CCD2C1;
 	text-decoration: none;
-	border: solid;
+	
 }
 
-.logo{
-	border: solid;
-}
+
 
 .title-container{
-	border: solid;
+	
 	display: flex;
 	justify-content: space-evenly;
 	padding-top: 60px;
@@ -103,7 +101,7 @@ a {
 	display: flex;
 	flex-direction: column;
 	text-align: center;
-	border: solid;
+	
 	justify-content: center;
 }
 
@@ -111,9 +109,7 @@ h1{
 	font-size: 70px;
 }
 
-#btn{
-	border: solid;
-}
+
 
 .button{
 	background-color: white;
@@ -123,39 +119,31 @@ h1{
 }
 
 .info-container1{
-	border: solid;
+	
 	display: flex;
-	justify-content: space-evenly;
+	justify-content: space-between;
 	align-items: center;
 	text-align: justify;
 	padding-top: 40px;
 	padding-bottom: 40px;
-	margin-left: 185px;
-	margin-right: 185px;
+	margin-left: 100px;
+	margin-right: 100px;
 }
 
-.features{
-	border: solid;
-}
 
-.about{
-	border: solid;
-}
 
 .middle-image{
 	display: flex;
-	border: solid;
 	justify-content: center;
 }
 
 .info-container2{
 	display: flex;
 	justify-content: center;
-	border: solid;
 	padding-top: 40px;
 	padding-bottom: 40px; 
-	margin-left: 150px;
-	margin-right: 150px;
+	margin-left: 100px;
+	margin-right: 100px;
 	
 }
 
