--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -149,4 +149,11 @@ h1{
 
 footer{
 	margin-left:20px;
+	margin-bottom: 20px;
+	padding-top: 50px;
+}
+
+footer p{
+	padding-top: 20px; 
+	text-align: center;
 }
