put box around sections, added padding to center content, added hr lines

--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -29,8 +29,8 @@ footer, header, hgroup, menu, nav, section {
 	display: block;
 }
 body {
-	line-height: 1;
-	max-width: 100%;
+	line-height: 1.1;
+	/*max-width: 100%;*/
 }
 ol, ul {
 	list-style: none;
@@ -160,6 +160,16 @@ footer p{
 
 
 /* services webpage css starts here*/
+.content{
+	width:90%;
+	border: solid;
+	margin: auto;
+}
+
+.site-start{
+	display: flex;
+	flex-direction: column;
+}
 
 
 .header-img{
@@ -170,10 +180,21 @@ footer p{
 .container{
 	display: flex;
 	align-content: center;
+	padding: 30px;
 }
 
 .services{
 	display: flex;
 	flex-direction: column;
+	justify-content: space-evenly;
 }
 
+ul{
+	list-style-type: circle;
+}
+
+.digital-design, .UX-UI, .digital-marketing, .WebDev, .IOS, .android{
+	border: solid;
+	background-color: #e1e3e1; 
+	padding: 30px;
+}
