--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -164,6 +164,7 @@ footer p{
 	width:90%;
 	border: solid;
 	margin: auto;
+	padding: 30px;
 }
 
 .site-start{
@@ -181,6 +182,8 @@ footer p{
 	display: flex;
 	align-content: center;
 	padding: 30px;
+	justify-content: space-between;
+	border: solid blue;
 }
 
 .services{
@@ -197,4 +200,10 @@ ul{
 	border: solid;
 	background-color: #e1e3e1; 
 	padding: 30px;
+	justify-content: space-between
+}
+
+
+#digital-design-UX{
+	border: solid red;
 }
